--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id="btn">
+	<div class="btn">
 		<button>submit</button>
 	</div>
 	<!-- the entire body must be written by student -->
