--- a/main.html
+++ b/main.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-	<div class="btn">
-		<button>submit</button>
-	</div>
+	<button id="btn" type="submit">submit</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
